# geekLock

./: .gitignore  Cargo.toml  GETTING_STARTED.md  INTEGRATION_GUIDE.md  README.md
DOCS/: THE_PLAN.md  THE_STEPS.md
src/: crypto.rs  main.rs
src/static/: app.js  index.html  style.css
