[package]
name = "geeklock"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
axum = "0.8.8"
base64 = "0.22.1"
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
